# unfriendly-engine

./: .gitignore  CMakeLists.txt  README.md  input_handler.h  main.cpp  shader.h  simulation.h  ui.h
etc/: config.json  flight_plan.json
include/: app.h  body.h  camera.h  config.h  flight_plan.h  input_handler.h  map.h  render_object.h  rocket.h  shader.h  simulation.h  spdlog_logger.h  ui.h
include/app/: app.h  config.h  map.h
include/core/: body.h  flight_plan.h  octree.h  orbital_elements.h  rocket.h  simulation.h
include/logging/: logger.h  spdlog_logger.h
include/rendering/: body_renderer.h  camera.h  render_object.h  saturn_rings.h  trajectory.h  trajectory_factory.h
include/ui/: fps_counter.h  input_handler.h  navball.h  orbital_info.h  ui.h
scripts/: build.sh  test.sh
src/: app.cpp  body.cpp  camera.cpp  config.cpp  flight_plan.cpp  input_handler.cpp  main.cpp  map.cpp  render_object.cpp  rocket.cpp  shader.cpp  simulation.cpp  spdlog_logger.cpp  ui.cpp
src/app/: app.cpp  config.cpp  map.cpp
src/core/: body.cpp  flight_plan.cpp  octree.cpp  rocket.cpp  simulation.cpp
src/logging/: spdlog_logger.cpp
src/rendering/: camera.cpp  render_object.cpp  saturn_rings.cpp  shader.cpp  trajectory.cpp
src/ui/: fps_counter.cpp  input_handler.cpp  navball.cpp  orbital_info.cpp  ui.cpp
tests/: test.h  test_config.cpp  test_flight_plan.cpp  test_gmock.cpp  test_octree.cpp  test_rocket.cpp  test_trajectory.cpp
verify/: verify_orbits.py
